modules/ecommerce/public/assets/styles/ecommerce.css
/* ... */
#shopping-cart-list ins-card.empty-state .ins-card-wrap >span {
    color: var(--font-color-body);
    text-align: center;
    font-family: var(--font-family-02);
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: 24px; 
}

/* Checkout */
#identify-customer a {
    color: var(--color-main);
}

/* Checkout Shipping */
#address-form-modal .ins-modal-wrap.show-modal.no-button .ins-modal-body {
    padding: 0px 32px 32px;
}
#address-form-modal .ins-modal-wrap.show-modal .ins-modal-head.no-heading .icon-close-1 {
    top: 34px;
    right: 32px;
    z-index: 100;
}
.pac-container {
    z-index: 9999 !important;
}

.empty-box {
    padding: 80px 24px;
    flex-direction: column;
    border-radius: 4px;
    border: 1px solid var(--color-ui-04);
    background: var(--color-ui-01);
    text-align: center;
}

.pr-8{
    padding-right: 8px;
}
.pb-8{
    padding-bottom: 8px;
}

